sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
var ecart = getNombreValeurs();
inv = true;
do {
	inv = false;
	if (ecart>1) {
		ecart = (ecart.toDouble / 1.3).toInt
	}
	var i =0;
	while (i+ecart < getNombreValeurs()) {
		if (plusPetit(i+ecart,i)) {
			echange(i,i+ecart);
			i +=1;
			inv = true;
		}
	}
} while (ecart > 1 || inv)
}



ecart = lgr;
 faire 
   si ecart>1 alors
     ecart = ecart / 1.3
   i = O
   tant que i+ecart < lgr faire:
     si i et i+ecart doivent être inversés, le faire
     incrémenter i de 1
 tant que l'écart est plus grand que 1 ou que le dernier parcours a inversé au moins un élément